<resources>
    <string name="app_name">SharedPreferenceSession</string>
    <string name="password">Enter your password</string>
    <string name="user_name">Enter your user-name</string>
    <string name="log_in">Log-in</string>
    <string name="sign_up">Sign-up</string>
    <string name="day">day</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="state">state</string>
    <string name="city">city</string>
    <string name="country">country</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="new_user_log_in">Already have an account… Log-in</string>
    <string name="already_have_an_account_sign_up">New User… Sign-up</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="log_out">Log-out</string>
    <string name="title">Movies App</string>
    <string name="api_key">dd05a3971bda331641d65bfd7776ccb0</string>
</resources>
